@@ -1,10 +1,11 @@
 --- #YAML:1.0
 name:                Win32-API
-version:             0.49
+version:             0.50
 abstract:            Perl Win32 API Import Facility
-license:             ~
+license:             perl
 author:              
     - Aldo Calpini <dada@perl.it>
+    - Cosimo Streppone <cosimo@cpan.org>
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
